[NTP Snippets] Don't notify about new suggestion when in a not-available state

BUG=662179

Review-Url: https://codereview.chromium.org/2496163002
Cr-Commit-Position: refs/heads/master@{#432165}

Former-commit-id: fb76bb12a9fa5ee0024dc92d32de3c2a0e8c8e46